--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head><title>Login</title></head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Login{% endblock %}
+{% block content %}
   <h2>Login</h2>
   <form method="POST">
     <label>Email:</label><br>
@@ -10,6 +9,5 @@
     <input type="password" name="password" required><br><br>
     <button type="submit">Login</button>
   </form>
-  <p>Don’t have an account? <a href="/register">Register</a></p>
-</body>
-</html>
+  <p>Don’t have an account? <a href="{{ url_for('auth.register') }}">Register</a></p>
+{% endblock %}
